--- a/content/themes/default/css/main.css
+++ b/content/themes/default/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: yellowgreen;
 }
 #content{
     background-color: yellowgreen;
@@ -10,5 +10,5 @@ body{
     background-color: pink;
 }
 .row{
-    background-color: red;
+    background-color: yellow;
 }
